--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<h1>hello</h1>
-<h1> health food</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nulla quibusdam amet obcaecati autem nostrum dolores vel delectus eum labore a tempore nihil eligendi maxime ratione, placeat corporis. Unde, modi.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>this is my Website</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Ali Shaahid</h1> 
+    <small>Developer</small>
+    <p>Ali Shaahid is an aspiring software engineer from the Maldives. He hails from Nolhivaramfaru, a picturesque island known for its crystal-clear blue waters and stunning skies. Surrounded by the natural beauty of his home, Ali is dedicated to pursuing his passion for technology and advancing his skills in software engineering. His journey combines the tranquility of island life with the dynamic world of coding, creating a unique perspective as he builds his career in the tech industry.</p>
+</body>
+</html>
